<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.khalid.CoPilot.MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/User_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_id" />

        <EditText
            android:id="@+id/login_uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/your_id_here"
            android:maxLength="8"
            android:inputType="number" />

        <TextView
            android:id="@+id/LoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/your_passowrd_here"
            android:maxLength="24"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/sign2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="userLogin"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="SignUP"
            android:text="@string/dont_have_an_account_sign_up_here" />

        <Button
            android:id="@+id/are_you_human_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Are you human?"
            android:visibility="invisible"/>

        <ProgressBar
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/progressbar"
            android:layout_centerInParent="true"
            android:layout_below="@id/are_you_human_button"
            android:visibility="invisible"
            />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>